--- a/package.json
+++ b/package.json
@@ -19,8 +19,13 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "express": "^4.16.3",
-    "if-env": "^1.0.4"
+    "if-env": "^1.0.4",
+    "mongoose": "^5.7.0",
+    "react": "^16.9.0",
+    "react-router-dom": "^5.0.1",
+    "react-router-hash-link": "^1.2.2"
   },
   "keywords": []
 }
