--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "@sendgrid/mail": "^6.4.0",
     "axios": "^0.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
